Security/network-policy/allow_all_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-policy
  namespace: internal
spec:
  podSelector: {}
  ingress: []
  egress: []
