Security/network-policy/egress_frontend_cidr.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-policy
  namespace: frontend
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 10.20.30.0/24
